Fix T65812: Image empty has wrong aspect with limit texture size